# air-music

./: .gitignore  PLAY_STORE_FORM_ANSWERS.md  PLAY_STORE_SUBMISSION.md  README.md  SPONSORS.md  build.sh
.github/workflows/: apk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/io/github/jqssun/displaymirror/shizuku/: IUserService.aidl
app/src/main/cpp/: CMakeLists.txt  input.cpp  sunshine.cpp  sunshine.h
app/src/main/java/com/displaylink/manager/: NativeDriver.java  NativeDriverListener.java
app/src/main/java/com/displaylink/manager/display/: DisplayMode.java  MonitorInfo.java
app/src/main/java/io/github/jqssun/displaymirror/: AirPlayForegroundService.java  AirPlayFragment.java  ApkImporter.java  DisplayLinkFragment.java  DisplaylinkState.java  LogAdapter.java  LogsFragment.java  MirrorActivity.java  MirrorMainActivity.java  MirrorTouchscreenBridge.java  MirrorTouchscreenProvider.java  MirrorUiState.java  MoonlightCursorOverlay.java  MoonlightFragment.java  OverviewFragment.java  Pref.java  SettingsFragment.java  State.java  SunshineService.java  TouchscreenActivity.java  TvFocus.java
app/src/main/java/io/github/jqssun/displaymirror/job/: AcquireShizuku.java  AirPlayAudioCapture.java  AirPlayAudioQuality.java  AirPlayEncoder.java  AirPlayService.java  AirPlayVolume.java  AndroidVersions.java  AudioRecordProxy.java  AutoRotateAndScaleForDisplaylink.java  AutoRotateAndScaleForMoonlight.java  ConnectToClient.java  CreateVirtualDisplay.java  ExitAll.java  ExternalTextureRenderer.java  FetchLogAndShare.java  Job.java  LandscapeAutoScaler.java  MirrorDisplayMonitor.java  (+12 more)
app/src/main/res/drawable/: banner.xml
app/src/main/res/layout/: activity_main.xml  fragment_airplay.xml  fragment_moonlight.xml  fragment_overview.xml
app/src/main/res/menu/: navigation_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
docs/: index.html  privacy.html
doubletake/: homepod-audio-only-keepalive.patch  homepod-force-homekit.patch  homepod-transient.patch  patches.go  patches_audio_test.go
doubletake/airplaylib/: airplay2.go  airplaylib.go  session_audio_test.go
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 41.txt
hidden-api-stub/src/main/java/android/app/: ActivityThread.java
hidden-api-stub/src/main/java/android/content/: ContextHidden.java  IContentProvider.java
hidden-api-stub/src/main/java/android/hardware/display/: DisplayManagerGlobal.java  IDisplayManager.java
hidden-api-stub/src/main/java/android/view/: InputDeviceHidden.java
scripts/: build_android2apple4music_release.ps1  check_android2apple4music_apk.py  test_android2apple4music_release.ps1
(+18 files in other folders)
